# ESP32_S2

./: .gitignore
esp32_fw/: .cproject  .project  CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
esp32_fw/main/: CMakeLists.txt  main.cpp  main.h
esp32_fw/main/ap/: ap.cpp
esp32_fw/main/bsp/: bsp.h
esp32_fw/main/common/hw/include/: uart.h
esp32_fw/main/hw/: hw.c  hw.h  hw_def.h
esp32_fw/main/hw/driver/: uart.c
